server file completed.

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -2,16 +2,18 @@
 <html>
 <head>
 	<title>Friend Finder</title>
+
+	<script src="https://code.jquery.com/jquery.js"></script>
 </head>
 <body>
 	<body class="container">
 	<div class="jumbotron">
 	  <h1>Friend Finder</h1>
 	  <hr>
-	  <h2>Learn to love again</h2>
-	  <h3>Just simply answer the following questions on the next page</h3>
+	  <h2>Find Your New Best Friend!</h2>
+	  <h3>A Quick Survey Is All It Takes!</h3>
 	  <br>
-	  <a href="/survey"><button type="button" id="victory" class="btn btn-primary btn-lg">Onward to Victory</button></a>
+	  <a href="/survey"><button type="button" id="survey" class="btn btn-primary btn-lg">Find Friends</button></a>
 	</div>
 </body>
 </html>
