--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Friend Finder</title>
 
-	<script src="https://code.jquery.com/jquery.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 </head>
 <body>
 	<body class="container">
@@ -13,7 +13,7 @@
 	  <h2>Find Your New Best Friend!</h2>
 	  <h3>A Quick Survey Is All It Takes!</h3>
 	  <br>
-	  <a href="/survey"><button type="button" id="survey" class="btn btn-primary btn-lg">Find Friends</button></a>
+	  <a href=><button type="button" id="survey" class="btn btn-primary btn-lg">Find Friends</button></a>
 	</div>
 </body>
 </html>
