--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,5 +7,133 @@
 </head>
 <body>
 
+<div class="container">
+  <h2>Survey Questions</h2>
+  <hr>
+
+  <h3><strong>About you</strong></h3>
+  
+  <h4>Name (Required)</h4>
+  <input type="text" class="form-control" id="nameInput">
+
+  <h4>Link to photo image (Required)</h4>
+  <input type="text" class="form-control" id="photoInput">
+  <hr>
+
+  
+  <h3><strong>Question 1</strong></h3>
+  <h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
+  <select id="question1"> 
+    <option value= "1">1 (Strongly Disagree)</option>
+    <option value="2">2</option>
+    <option value= "3">3</option>
+    <option value= "4">4</option>
+    <option value= "5">5 (Strongly Agree)</option>
+  </select>
+
+  <h3><strong>Question 2</strong></h3>
+  <h5>Generally speaking, you rely more on your experience than your imagination.</h5>
+  <select id="question2">
+    <option valuee= "1">1 (Strongly Disagree)</option>
+    <option value= "2">2</option>
+    <option value= "3">3</option>
+    <option value= "4">4</option>
+    <option value= "5">5 (Strongly Agree)</option>
+  </select>
+
+  
+  <h3><strong>Question 3</strong></h3>
+  <h5>You find it easy to stay relaxed and focused even when there is some pressure.</h5>
+  <select id="question3"> 
+    <option value= "1">1 (Strongly Disagree)</option>
+    <option value= "2">2</option>
+    <option value= "3">3</option>
+    <option value= "4">4</option>
+    <option value= "5">5 (Strongly Agree)</option>
+  </select>
+
+  
+  <h3><strong>Question 4</strong></h3>
+  <h5>You rarely do something just out of sheer curiosity.</h5>
+  <select id="question4">
+    <option value= "1">1 (Strongly Disagree)</option>
+    <option value= "2">2</option>
+    <option value= "3">3</option>
+    <option value= "4">4</option>
+    <option value= "5">5 (Strongly Agree)</option>
+  </select>
+
+  
+  <h3><strong>Question 5</strong></h3>
+  <h5>People can rarely upset you.</h5>
+  <select id="question5">
+    <option value= "1">1 (Strongly Disagree)</option>
+    <option value= "2">2</option>
+    <option value= "3">3</option>
+    <option value= "4">4</option>
+    <option value= "5">5 (Strongly Agree)</option>
+  </select>
+
+  
+  <h3><strong>Question 6</strong></h3>
+  <h5>It is often difficult for you to relate to other people’s feelings.</h5>
+  <select id="question6">
+    <option value= "1">1 (Strongly Disagree)</option>
+    <option value= "2">2</option>
+    <option value= "3">3</option>
+    <option value= "4">4</option>
+    <option value= "5">5 (Strongly Agree)</option>
+  </select>
+
+  
+  <h3><strong>Question 7</strong></h3>
+  <h5>In a discussion, truth should be more important than people’s sensitivities.</h5>
+  <select id="question7">
+    <option value= "1">1 (Strongly Disagree)</option>
+    <option value= "2">2</option>
+    <option value= "3">3</option>
+    <option value= "4">4</option>
+    <option value= "5">5 (Strongly Agree)</option>
+  </select>
+
+  
+  <h3><strong>Question 8</strong></h3>
+  <h5>You rarely get carried away by fantasies and ideas.</h5>
+  <select id="question8">
+    <option value= "1">1 (Strongly Disagree)</option>
+    <option value= "2">2</option>
+    <option value= "3">3</option>
+    <option value= "4">4</option>
+    <option value= "4">5 (Strongly Agree)</option>
+  </select>
+
+  
+  <h3><strong>Question 9</strong></h3>
+  <h5>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</h5>
+  <select id="question9">
+    <option value= "1">1 (Strongly Disagree)</option>
+    <option value= "2">2</option>
+    <option value= "3">3</option>
+    <option value= "4">4</option>
+    <option value= "5">5 (Strongly Agree)</option>
+  </select>
+
+  
+  <h3><strong>Question 10</strong></h3>
+  <h5>You feel more energetic after spending time with a group of people.</h5>
+  <select id="question10">
+    <option value= "1">1 (Strongly Disagree)</option>
+    <option value= "2">2</option>
+    <option value= "3">3</option>
+    <option value= "4">4</option>
+    <option value= "5">5 (Strongly Agree)</option>
+  </select>
+
+
+
+
+  <br>
+  <button type="submit"  id="submitButton">Submit</button>
+</div>
 </body>
 </html>
